Closed
Bug 261315
Opened 21 years ago
Closed 21 years ago
program name lowercasing should happen in Startup()
Categories
(Core Graveyard :: X-remote, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bryner, Assigned: bryner)
Details
(Keywords: fixed-aviary1.0)
Attachments
(1 file)
|
1009 bytes,
patch
|
blizzard
:
review+
blizzard
:
superreview+
chofmann
:
approval-aviary+
chofmann
:
approval1.7.5+
|
Details | Diff | Splinter Review |
currently the program name for xremote is lowercased in AddBrowserInstance, this
doesn't work for non-browser apps like thunderbird. It should happen just once
in Startup(). This is breaking x-remote mailto: handling for thunderbird.
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #159921 -
Flags: superreview?(blizzard)
Attachment #159921 -
Flags: review?(blizzard)
| Assignee | ||
Comment 2•21 years ago
|
||
nominating for blocking-1.0, this is a pretty major integration issue.. if you
already have thunderbird running, mailto links and send link don't work.
Status: NEW → ASSIGNED
Flags: blocking-aviary1.0?
Updated•21 years ago
|
Attachment #159921 -
Flags: superreview?(blizzard)
Attachment #159921 -
Flags: superreview+
Attachment #159921 -
Flags: review?(blizzard)
Attachment #159921 -
Flags: review+
| Assignee | ||
Comment 3•21 years ago
|
||
Comment on attachment 159921 [details] [diff] [review]
patch
nominating for 1.7 and aviary branch approval
Attachment #159921 -
Flags: approval1.7.x?
Attachment #159921 -
Flags: approval-aviary?
Comment 4•21 years ago
|
||
Comment on attachment 159921 [details] [diff] [review]
patch
a=chofmann for the branches
Attachment #159921 -
Flags: approval1.7.x?
Attachment #159921 -
Flags: approval1.7.x+
Attachment #159921 -
Flags: approval-aviary?
Attachment #159921 -
Flags: approval-aviary+
| Assignee | ||
Comment 5•21 years ago
|
||
checked in on trunk and aviary branch. There's actually nothing to check in on
the 1.7 branch because blizzard's prerequisite patch for bug 244060 never landed
on the 1.7 branch.
Comment 6•21 years ago
|
||
not sure if the following is related to this bug --if not, I can file a separate
report.
1. start thunderbird (eg, I've got 2004092705-0.8).
2. start firefox (eg, I've got 2004092709-0.9).
3. in firefox, click either a mailto: link or select File > Send Link.
results: get an alert dialog which says, "The file
resource:///chrome/comm.jar!/content/navigator/navigator.xul cannot be found.
Please check the location and try again."
after I click OK in the alert, tbird crashes with this in the shell:
./run-mozilla.sh: line 451: 1034 Segmentation fault "$prog" ${1+"$@"}
(no talkback as talkback isn't in today's bits so far.)
Comment 7•21 years ago
|
||
spun off bug 261961 for the issue in comment 6.
Updated•21 years ago
|
Flags: blocking-aviary1.0?
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•