Lowercase the program name in Startup, not in AddBrowserInstance.  Fixes xremote for Thunderbird (bug 261315), r+sr=blizzard, a=chofmann.